--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "test": "echo \"No tests configured\" && exit 0",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "3.5.3",
     "vite": "^6.1.0"
   },
@@ -19,5 +24,9 @@
     "autoprefixer": "^10.4.21",
     "postcss-preset-env": "^10.1.5",
     "swiper": "^11.2.2"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,html,css;json}": "prettier --write"
   }
 }
